# JiraMCPServerExample

./: .env.example  .gitignore  JiraClient.py  Notes2-uv.txt  README.md  pyproject.toml  requirements.txt
Code/Gmail/: Test_script_Token.py  gmail_auth.py  gmail_mcp_server.py
Code/JIRA/: Jira_Connection_test.py  Jira_mcp_server_http.py  Jira_mcp_server_stdio.py
Code/OPIK/: Jira_mcp_server_stdio_opik.py
Docker/: Dockerfile  Jira_mcp_server_http_k8s.py  requirements.txt
Docker/Metrics/: Dockerfile.metrics  Jira_mcp_server_http_k8s_metrics.py  requirements.txt  servicemonitor.yaml
Docker/Metrics/delete/: Dockerfile  Jira_mcp_server_http_k8s metrics.py
Docker/k8s/: namespace.yaml
Docker/k8s/phase1/: 01-configmap.yaml  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
Docker/k8s/phase2/: certificate.yaml  clusterissuer.yaml  hpa.yaml  networkpolicy.yaml  poddisruptionbudget.yaml
Docker/k8s/week2/: headless-service.yaml
