[project]
name = "jira-mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "google-auth-oauthlib>=1.3.0",
    "google-auth-httplib2>=0.3.0",
    "google-api-python-client>=2.193.0",
    "prometheus-client>=0.24.1",
    "opik>=1.10.58",
]

[tool.uv]
managed = true
# This ensures uv manages your virtual environment automatically